@@ -1,8 +1,5 @@
 SUBDIRS = po src data misc contrib
 
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libdevhelp-1.0.pc
-
 INTLTOOL =                      \
 	intltool-extract.in     \
 	intltool-merge.in       \
@@ -11,7 +8,6 @@ INTLTOOL =                      \
 EXTRA_DIST =			\
 	$(INTLTOOL)             \
 	autogen.sh		\
-	libdevhelp-1.0.pc.in    \
 	misc/devhelp.el	        \
 	misc/html2funcs.py	\
 	misc/html2xml.py	\
