@@ -87,10 +87,10 @@ AM_PATH_PYTHON([2.3],[],[no])
 
 AC_CONFIG_FILES([
 Makefile
-libdevhelp-1.0.pc
 po/Makefile.in
 src/Makefile
 data/Makefile
+data/libdevhelp-1.0.pc
 data/devhelp.desktop.in
 data/icons/Makefile
 data/ui/Makefile
